--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "illuminate/html": "^5.0",
+        // "illuminate/html": "5.0.*@dev",
         "laravelcollective/html": "5.2.*",
         "ignasbernotas/laravel-model-generator": "^1"
     },
