--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "illuminate/html": "^5.0",
-        // "illuminate/html": "5.0.*@dev",
+        // "illuminate/html": "^5.0",
+        "illuminate/html": "5.0.*@dev",
         "laravelcollective/html": "5.2.*",
         "ignasbernotas/laravel-model-generator": "^1"
     },
