--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.2.*",
         "illuminate/html": "5.0.*@dev",
         "laravelcollective/html": "5.2.*",
-        "ignasbernotas/laravel-model-generator": "^1"
+        "ignasbernotas/laravel-model-generator": "^1",
+        "phpmailer/phpmailer": "^5.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
